...

    Card(
        modifier = modifier
            .fillMaxWidth()
            .border(width = 0.dp, Color.LightGray, shape = RoundedCornerShape(8.dp))
            .clip(RoundedCornerShape(8.dp))
            .testTag("PokemonCard"),
        backgroundColor = MaterialTheme.colors.surface,
        elevation = 4.dp
    ) {
        Row(
            modifier = Modifier
                .fillMaxWidth()
...
