...
        mutableStateOf(pokemon)
    }

    val spriteBaseUrl =
        "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/"
    LazyColumn(
        modifier = Modifier.testTag("CardList"),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        contentPadding = PaddingValues(vertical = contentPadding.dp)
    ) {
        item {
            Column {
                Text(
...
