...
        modifier = modifier
            .background(Color.Transparent)
            .padding(top = 32.dp),
        navigationIcon = {
            IconButton(
                modifier = Modifier.semantics {
                    contentDescription = "nav-back"
                },
                onClick = { navigateBack() },
            ) {
                Icon(
                    imageVector = Icons.Default.ArrowBack, contentDescription = "back",
                    tint = MaterialTheme.colors.onPrimary
...
